--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  persistent_bottom_nav_bar_v2: ^4.2.8
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
